cmake_minimum_required(VERSION 3.10.0)

project(gl3d)

message(STATUS "--------------------------------")
message(STATUS "[subproject] Initialize : glDemo")
add_subdirectory(glDemo)
message(STATUS "--------------------------------")
message(STATUS "[subproject] Initialize : moDemo")
add_subdirectory(moDemo)
message(STATUS "--------------------------------")
message(STATUS "[subproject] Initialize : imDemo")
add_subdirectory(imDemo)
message(STATUS "--------------------------------")
message(STATUS "[subproject] Initialize : skyDemo")
add_subdirectory(skyDemo)
message(STATUS "--------------------------------")
message(STATUS "[subproject] Initialize : shaderDemo")
add_subdirectory(shaderDemo)
message(STATUS "--------------------------------")
message(STATUS "[subproject] Initialize : sphereDemo")
add_subdirectory(sphereDemo)
message(STATUS "--------------------------------")
message(STATUS "[subproject] Initialize : kineticDemo")
add_subdirectory(kineticDemo)
message(STATUS "--------------------------------")
message(STATUS "[subproject] Initialize : jointBindDemo")
add_subdirectory(jointBindDemo)
message(STATUS "--------------------------------")
message(STATUS "[subproject] Initialize : D3Demo")
add_subdirectory(D3Demo)