cmake_minimum_required(VERSION 3.10.0)

project(glDemo)

if(UNIX)
  add_executable(glDemo main.cpp)
  target_link_libraries(glDemo stdc++ GL GLU glut GLEW)
elseif(WIN32)
  set(HOME_LIB       "E:/Windows Kits/10/Lib/10.0.17763.0/um/x86")
  set(HOME_GLM       "F:/glm.0.9.9.800/build/native")
  set(HOME_GLEW      "F:/Program Files/glew-2.1.0-win32/glew-2.1.0")
  set(HOME_FREE_GLUT "F:/freeglut.2.8.1.15/build/native")
  include_directories("${HOME_GLM}/include" "${HOME_GLEW}/include" "${HOME_FREE_GLUT}/include")
  link_directories("${HOME_GLEW}/lib/Release/Win32" "${HOME_FREE_GLUT}/lib/v110/Win32/Release/dynamic")
  add_executable(glDemo WIN32 main.cpp)
  target_link_libraries(glDemo freeglut glew32 opengl32)
endif()